[project]
name = "timebase-mcp"
version = "0.1.3"
description = "Model Context Protocol (MCP) server for TimeBase"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "EPAM Systems" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "timebase",
    "time-series",
    "db",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "mcp[cli]>=1.28.0,<1.29.0",
    "packaging>=26.0,<27.0",
    "pydantic>=2.13.3,<2.14.0",
    "pydantic-settings>=2.14.0,<2.15.0",
    "pyjwt[crypto]>=2.13.0,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/epam/TimeBase-MCP"
Repository = "https://github.com/epam/TimeBase-MCP"
Documentation = "https://github.com/epam/TimeBase-MCP#readme"
Issues = "https://github.com/epam/TimeBase-MCP/issues"
Changelog = "https://github.com/epam/TimeBase-MCP/releases"

[project.optional-dependencies]
community = [
    "dxapi-ce===6.2.3",
]
enterprise = [
    "dxapi-ee===5.5.74",
]
all = [
    "dxapi-ee===5.5.74",
    "dxapi-ce===6.2.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "inline-snapshot>=0.32.7",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.inline-snapshot]
format-command="ruff check --fix-only --stdin-filename {filename} | ruff format --stdin-filename {filename}"

[tool.pytest.ini_options]
addopts = "-m \"not integration\""
markers = [
    "integration: tests that require a live TimeBase instance",
]

[project.scripts]
timebase-mcp = "timebase_mcp.main:main"
